--- a/LibraryPush/push/src/main/AndroidManifest.xml
+++ b/LibraryPush/push/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
-    package="com.whaley.lib.pay">
+    package="com.whaley.lib.push">
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
