--- a/LibraryPlayer/player/build.gradle
+++ b/LibraryPlayer/player/build.gradle
@@ -1,18 +1,16 @@
 apply plugin: 'com.android.library'
-
+apply from: 'publish_local_repository.gradle'
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
-
-    lintOptions {
-        abortOnError false
-    }
+    compileSdkVersion 25
+    buildToolsVersion "26.0.0"
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 24
+        minSdkVersion 19
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
     buildTypes {
@@ -21,16 +19,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    repositories {
-        flatDir {
-            dirs 'libs'
-        }
-
-    }
-
     sourceSets {
         main {
+            java.srcDirs = ['src/main/java']
             jniLibs.srcDirs = ['libs']
         }
     }
@@ -38,6 +29,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    testCompile 'junit:junit:4.12'
 }
-
-apply from: 'publish_local_repository.gradle'
